--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ body{
   font-family: 'Monument';
   overflow: hidden;
   background-color: #242424;
+  text-align: center;
 }
 .container{
   display: flex;
@@ -12,4 +13,5 @@ body{
   width: 100%;
   height: 100vh;
   flex-direction: row;
+  text-align: center;
 }
