--- a/src/Content.css
+++ b/src/Content.css
@@ -1,13 +1,12 @@
 .content{
     display: flex;
-    align-items: left;
+    align-items: center;
     justify-content: center;
     height: 100vh;
     width: 30vw;
     margin-left: 200px;
     margin-right: 50px;
     flex-direction: column;
-    text-align: center;
 }
 .content h1{
     font-weight: 700;
